--- a/TP1 - Muestreo de señales - Forurier-calanis.ipynb
+++ b/TP1 - Muestreo de señales - Forurier-calanis.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +110,7 @@
     "    \n",
     "    # fin de la función\n",
     "    \n",
+    "    \n",
     "    "
    ]
   },
@@ -130,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,15 +139,22 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "mpl.rcParams['figure.figsize']=(10,10)\n",
+    "\n",
+    "\n",
     "\n",
     "# Insertar aquí el código para inicializar tu notebook\n",
     "########################################################\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,12 +163,14 @@
     "\n",
     "N  = 1000 # muestras\n",
     "fs = 1000 # Hz\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +230,9 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -235,13 +248,15 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b> No,ya que la escala de eje de abcisa no esta escalada en el tiempo.\n",
+    "</div>\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -277,6 +292,7 @@
     "plt.xlabel(\"tiempo [seg]\") \n",
     "plt.ylabel(\"Amplitud [V]\") \n",
     "plt.show()\n",
+    "\n",
     "\n"
    ]
   },
@@ -334,8 +350,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b> No se puede reconocer los parametros de la senoidal.\n",
+    "</div>\n"
    ]
   },
   {
@@ -350,8 +366,10 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b> en la señal a.2: se muestrea la señal senoidal en un entorno de n*pi radianes lo que da como resultado \n",
+    "    valores muy cercanos a cero.\n",
+    "    en a.3: la señal senoidal se muestrea en multiplos de 1/2*pi por lo que los valores muestreados son todos igual a 1. \n",
+    "</div>\n"
    ]
   },
   {
@@ -407,8 +425,9 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b> No es posible diferenciar ambas señales,ya que la señal a.4 es producto del muestreo con Ts (1 ms) levemente mayor a\n",
+    "    T0(aprox 0.99 ms) ,con las sucesivas mestras se va obteniendo los distintos puntos de la senoidal y ya que tengo la misma cantidad de las mismas (N=1000) obtengo la misma representacion de señal.\n",
+    "</div>\n"
    ]
   },
   {
@@ -1104,8 +1123,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b> Si, ha variado el espectro en los distintos casos.\n",
+    "</div>\n"
    ]
   },
   {
@@ -1120,8 +1139,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b> la variacion en el espectro se debe a que la señal en el tiempo discreto al agregar muestras en ceros es equivalente a multiplicar la señal senoidal con una ventana en el dominio del tiempo discreto lo que en el dominio tranformado implica comvolucionar el espectro de la señal senoidal con el espectro de la ventana (la cual es un espectro con la forma de sinc).al variar las cantidad de muestras varia la duracion de la ventana por lo que la forma del espectro tambien se modifica.\n",
+    "</div>\n"
    ]
   },
   {
@@ -1827,8 +1846,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b> En este caso el espectro se modifica ya que la señal se podria interpretar como el producto de la señal senoidal con una ventana cuya duracion es igual a 9 peridos de la senoidal(zero padding).En cuanto la energia ,esta disminuye a 1/9 del caso anterior ya que tenemos un ciclo en un rango de tiempo igual a 9 periodos de la senoidal. \n",
+    "</div>\n"
    ]
   },
   {
@@ -2068,8 +2087,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b>  El espectro de amplitud no se modifica ya que la señal es la misma que la anterior pero desplazada en el tiempo , dicho desplazamiento solo modifica el espectro de fase.En cuanto a energia no hay variaciones ya que espectro de amplitud es el mismo.\n",
+    "</div>\n"
    ]
   },
   {
@@ -2584,8 +2603,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b> El espectro es identico al anterior,no es posible discernir la secuencia de ocurrencia por lo que en este caso no es practico analizar el espectro.\n",
+    "</div>\n"
    ]
   },
   {
@@ -2822,8 +2841,9 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b> Con respecto a la señal de 9 ciclos la energia es un tercio de esta ,lo cual es esperado dado que la señal es distinta de cero un tercio respecto del tiempo total de analisis.\n",
+    "Y con respecto a la señal de un ciclo la energia es 3 veces mayor por equivalentes motivos.\n",
+    "</div>\n"
    ]
   },
   {
@@ -3085,8 +3105,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b>La energia en f0 para esta señal es aproximadamente 9 veces mayor a la señal de los 3 ciclos con amplitud unitaria.\n",
+    "</div>\n"
    ]
   },
   {
@@ -3355,8 +3375,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b> Con respecto a la señal anterior la energia en f0 es mucho mayor ya que la señal es continua en todo el periodo de analisis,y con respecto a la señal unitaria tambien es mucho mayor debido a la mayor amplitud en los distintos ciclos,.\n",
+    "</div>\n"
    ]
   },
   {
@@ -3616,8 +3636,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Respuesta:</b> Escriba aquí su respuesta.\n",
-    "</div>"
+    "<b>Respuesta:</b>En este caso la energia en f0 es mucho menor ya que lo que se tiene son dos ciclos de una señal senoidal de la misma amplitud que estan en contra fase.\n",
+    "</div>\n"
    ]
   },
   {
